---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/re_lexing/line_continuation_windows_eol.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        range: 0..43,
        body: [
            Expr(
                StmtExpr {
                    range: 0..10,
                    value: Call(
                        ExprCall {
                            range: 0..10,
                            func: Name(
                                ExprName {
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..10,
                                args: [
                                    Name(
                                        ExprName {
                                            range: 5..6,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            range: 8..9,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 24..43,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("bar"),
                        range: 28..31,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 31..33,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                range: 39..43,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(a, b, # comment \
  |                       ^ Syntax Error: Expected `)`, found newline
2 |
3 | def bar():
4 |     pass
  |
